# incident_information_extractor

./: .dockerignore  .env.example  .env.local  Dockerfile  README.md  docker-compose.yml  notebook.ipynb  pyproject.toml
.github/workflows/: ci.yml
app/domain/: exceptions.py
debug_scripts/: run_local.py
src/application/: interfaces.py  use_cases.py
src/application/interfaces/: __init__.py  llm_service.py  text_processing.py
src/application/use_cases/: __init__.py  extract_incident_info.py
src/domain/: __init__.py  entities.py  value_objects.py
src/domain/entities/: __init__.py  incident.py  incident_text.py
src/domain/value_objects/: __init__.py  extraction_prompt.py  llm_response.py
src/infrastructure/: __init__.py  json_parser.py  ollama_service.py  text_postprocessor.py  text_preprocessor.py
src/infrastructure/models/: ollama_service.py
src/infrastructure/parsers/: __init__.py  json_parser.py
src/infrastructure/processors/: __init__.py  text_postprocessor.py  text_preprocessor.py
src/presentation/: __init__.py  api.py  schemas.py
src/presentation/api/: __init__.py  main.py  schemas.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_entities.py  test_json_parser.py  test_text_postprocessor.py  test_text_preprocessor.py  test_use_cases.py
