[project]
name = "incident-information-extractor"
version = "0.1.0"
description = "Api de extração de informações de incidentes com LLM local."
authors = [
    {name = "gslmota",email = "gabrielsavio81@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
