[project]
name = "incident-information-extractor"
version = "0.1.0"
description = "Api de extração de informações de incidentes com LLM local."
authors = [
    {name = "gslmota",email = "gabrielsavio81@gmail.com"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
httpx = "^0.25.2"
python-dateutil = "^2.8.2"
structlog = "^23.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
